Implement remake-aware scoring and match analysis API